# FRE2017

./: README.md
ball_detection/: CMakeLists.txt
ball_detection/src/: ball_detection.cpp
dynamic_transform_manager/launch/: test_dynamic_tf.launch
fieldrobot_event2017/launch/: start_point_follower.launch  start_row_follower.launch
fieldrobot_event2017/launch/navigation/: start_pattern_1L.launch  start_pattern_1R.launch
fieldrobot_event2017/waypoints/: 1L.txt  1R.txt
goal_manager/src/: robot_goal_creater.cpp
infinisoleil/: CHANGELOG.rst  CMakeLists.txt  COPYING  infinisoleil_nodelets.xml
infinisoleil/cfg/: FX8.cfg
infinisoleil/launch/: fx8_driver.launch  fx8_node.launch
laser_filters/launch/: filter_base.yaml  filter_base_security.yaml  start_base_filter_lasers.launch
laser_filters/src/: scan_to_cloud_filter_chain.cpp  scan_to_scan_filter_chain.cpp
laser_row_detection/src/: tf_row_publisher.cpp
mode_changer/: CMakeLists.txt  package.xml
mode_changer/launch/: start_mode_changer.launch
mode_changer/src/: mode_changer_twist.cpp
mode_control/launch/: start_mode_controler_task1.launch
opencv_test/: CMakeLists.txt  package.xml
opencv_test/launch/: start_image_program.launch
opencv_test/src/: opencv_test.cpp
pcl_test/: CMakeLists.txt
pcl_test/lauch/: start_outlier.launch~
pointcloud_plantdetector/cfg/: Filter.cfg~
sick_tim/launch/: sick_tim571_2050101.launch  start_laserscanners.launch
usb_cam/: CMakeLists.txt  package.xml
usb_cam/launch/: usb_cam-test.launch  usb_cam_fieldrobot_event.launch
usb_relais/: CMakeLists.txt  package.xml
usb_relais/launch/: start_nozzles.launch  start_relais.launch
usb_relais/src/: activate_relais.cpp  activate_relais_with_pointcloud.cpp  usb_relais.cpp
vectornav_vn100/src/: vectornav_vn100_node.cpp  vectornav_vn100_node.cpp~
